AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <label>Block</label>
    <length>50</length>
    <type>Text</type>
</CustomField>