AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Cadastral_Reference__c.field-meta.xml
<CustomField>
    <fullName>Cadastral_Reference__c</fullName>
    <label>Cadastral Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>