AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Cover_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Cover_Image_Id__c</fullName>
    <label>Cover Image Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>