AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Door__c.field-meta.xml
<CustomField>
    <fullName>Door__c</fullName>
    <label>Door</label>
    <length>50</length>
    <type>Text</type>
</CustomField>