AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Features_and_Notes__c.field-meta.xml
<CustomField>
    <fullName>Features_and_Notes__c</fullName>
    <label>Features and Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>