AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>