AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Has_Elevator_Matchmaking__c.field-meta.xml
<CustomField>
    <fullName>Has_Elevator_Matchmaking__c</fullName>
    <formula>Property__r.Has_Elevator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Elevator Matchmaking</label>
    <type>Checkbox</type>
</CustomField>