AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Listing_URL__c.field-meta.xml
<CustomField>
    <fullName>Listing_URL__c</fullName>
    <label>Listing URL</label>
    <type>Url</type>
</CustomField>