AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Matchmaking_Address__c.field-meta.xml
<CustomField>
    <fullName>Matchmaking_Address__c</fullName>
    <formula>Property__r.Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matchmaking Address</label>
    <type>Text</type>
</CustomField>