AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Matchmaking_State__c.field-meta.xml
<CustomField>
    <fullName>Matchmaking_State__c</fullName>
    <formula>TEXT(Property__r.State_Province__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matchmaking State</label>
    <type>Text</type>
</CustomField>