AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Occupancy_Status__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Status__c</fullName>
    <label>Occupancy Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
                <default>true</default>
                <label>Vacant</label>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Owner Occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>