AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Owner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inmuebles_Propios</relationshipName>
    <type>Lookup</type>
</CustomField>