AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Piso / Apartamento</fullName>
                <default>true</default>
                <label>Piso / Apartamento</label>
            </value>
            <value>
                <fullName>Chalet / Casa</fullName>
            </value>
            <value>
                <fullName>Local Comercial</fullName>
            </value>
            <value>
                <fullName>Oficina</fullName>
            </value>
            <value>
                <fullName>Terreno / Parcela</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>