AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Square_Meters__c.field-meta.xml
<CustomField>
    <fullName>Square_Meters__c</fullName>
    <label>Square Meters</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>