AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <formula>TEXT( Property__r.State_Province__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State / Province</label>
    <type>Text</type>
</CustomField>