AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/fields/Unit_Reference__c.field-meta.xml
<CustomField>
    <fullName>Unit_Reference__c</fullName>
    <displayFormat>UR-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Unit Reference</label>
    <type>AutoNumber</type>
</CustomField>