AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/validationRules/Banos_Enteros.validationRule-meta.xml
<ValidationRule>
    <fullName>Banos_Enteros</fullName>
    <active>true</active>
    <errorConditionFormula>FLOOR(Bathrooms__c) &lt;&gt; Bathrooms__c</errorConditionFormula>
    <errorDisplayField>Bathrooms__c</errorDisplayField>
    <errorMessage>El número de baños debe ser un valor exacto entero (sin decimales).</errorMessage>
</ValidationRule>