AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/validationRules/Whole_Bathrooms.validationRule-meta.xml
<ValidationRule>
    <fullName>Whole_Bathrooms</fullName>
    <active>true</active>
    <errorConditionFormula>FLOOR(Bathrooms__c) &lt;&gt; Bathrooms__c</errorConditionFormula>
    <errorDisplayField>Bathrooms__c</errorDisplayField>
    <errorMessage>The number of bathrooms must be a whole number (no decimals).</errorMessage>
</ValidationRule>