AppInmobiliaria/force-app/main/default/objects/Property_Unit__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Unit_Reference__c</columns>
    <columns>Owner_Contact__c</columns>
    <columns>Property_Type__c</columns>
    <columns>Property__c</columns>
    <columns>Square_Meters__c</columns>
    <columns>Occupancy_Status__c</columns>
    <columns>Thumbnail__c</columns>
    <columns>Listing_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>